--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ant-design/icons": "^5.5.1",
     "antd": "^5.21.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
